...
    : _client = client,
      _fetch = fetch;

  /// Unenroll removes a MFA factor.
  ///
  /// A user has to have an `aal2` authenticator level in order to unenroll a
  /// `verified` factor.
  Future<AuthMFAUnenrollResponse> unenroll(String factorId) async {
    final session = _client.currentSession;

    final data = await _fetch.request(
      '${_client._url}/factors/$factorId',
      HttpMethod.delete,
...
